--- a/index.html
+++ b/index.html
@@ -334,60 +334,7 @@
       $tocListWrap.innerHTML = '';
       let lastPart = null;
       let curUL = null;
-      for (let i = 0; i < CHAPTERS.length; i++){
-        const c = CHAPTERS[i];
-        if (c.part !== lastPart){
-          const hd = document.createElement('div');
-          hd.className = 'cshell-part';
-          hd.textContent = partDisplay(c.part, c.years);
-          $tocListWrap.appendChild(hd);
-
-          curUL = document.createElement('ul');
-          curUL.className = 'cshell-list';
-          curUL.setAttribute('data-part', c.part);
-          $tocListWrap.appendChild(curUL);
-
-          lastPart = c.part;
-        }
-        const li = document.createElement('li');
-        li.className = 'cshell-item';
-        const chapNo = i + 1;
-        li.innerHTML = `<a href="#read?i=${i}" data-i="${i}"><span class="cshell-chapno">第${chapNo}章</span>${c.title}</a>`;
-        curUL.appendChild(li);
-      }
-
-      updateResumeCard();
-
-      // click handlers
-      QSA('a[data-i]', $tocListWrap).forEach(a => {
-        a.addEventListener('click', (e)=>{
-          e.preventDefault();
-          const i = parseInt(a.getAttribute('data-i'),10);
-          openChapter(i);
-          history.pushState({read:i}, '', `#read?i=${i}`);
-        });
-      });
-
-      $resumeBtn.addEventListener('click', ()=>{
-        const last2 = getLast();
-        if (last2 && CHAPTERS[last2.index]){
-          openChapter(last2.index, { restoreLast: true });
-          history.pushState({read:last2.index}, '', `#read?i=${last2.index}`);
-        }
-      });
-
-      for (let i=0;i<CHAPTERS.length;i++){
-        const c = CHAPTERS[i];
-        const li = document.createElement('li');
-        li.className = 'cshell-item';
-        li.innerHTML = `<a href="#read?i=${i}" data-i="${i}">${c.title.replace(/^第一编_/,'')}</a>`;
-        $chapterList.appendChild(li);
-      }
-      updateResumeCard();
-      QSA('a[data-i]', $chapterList).forEach(a => {
-        a.addEventListener('click', (e)=>{ e.preventDefault(); const i = parseInt(a.getAttribute('data-i'),10); openChapter(i); history.pushState({read:i}, '', `#read?i=${i}`); });
-      });
-      $resumeBtn.addEventListener('click', ()=>{ const last2 = getLast(); if (last2 && CHAPTERS[last2.index]){ openChapter(last2.index, { restoreLast: true }); history.pushState({read:last2.index}, '', `#read?i=${last2.index}`); } });
+history.pushState({read:last2.index}, '', `#read?i=${last2.index}`); } });
     }
 
     function renderBookmarks(){
