--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     .cshell-tab { flex:1; text-align:center; padding:10px 0; border-radius:10px; color: var(--cshell-muted); border:1px solid var(--cshell-border); background: var(--cshell-card); }
     .cshell-tab[aria-selected="true"] { color:#fff; background: linear-gradient(135deg, var(--cshell-card), rgba(122,162,255,.12)); border-color: rgba(122,162,255,.3); font-weight:600; }
     .cshell-section { margin-top:12px; }
-    .cshell-part { color:var(--cshell-muted); font-size:12px; margin:12px 8px 6px; }
+    .cshell-part { color:var(--cshell-muted); font-size:14px; margin:20px 0 20px 14px; }
     .cshell-list { list-style:none; margin:0; padding:0; display:grid; grid-template-columns: 1fr; gap:10px; }
     .cshell-item { display:flex; align-items:center; justify-content:space-between; gap:10px; padding:14px 14px; border:1px solid var(--cshell-border); border-radius:12px; background: var(--cshell-card); }
     .cshell-item a { color:#fff; text-decoration:none; font-weight:600; }
