--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
       "number": 2,
       "part": "第一编",
       "years": "1970s–2008",
-      "title": "赛博空间的政治",
-      "file": "第一编_第2章_赛博空间的政治.html"
+      "title": "密码朋克的政治",
+      "file": "第一编_第2章_密码朋克的政治.html"
     },
     {
       "number": 3,
