--- a/cover.html
+++ b/cover.html
@@ -55,6 +55,22 @@
     }
     svg.bg { position:fixed; inset:0; width:100%; height:100%; display:block; }
   </style>
+
+  <!-- Social / WeChat share metadata -->
+  <meta property="og:type" content="website"/>
+  <meta property="og:title" content="Crypto简史"/>
+  <meta property="og:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
+  <meta property="og:image" content="./assets/og-image.png"/>
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:title" content="Crypto简史"/>
+  <meta name="twitter:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
+  <meta name="twitter:image" content="./assets/og-image.png"/>
+  <!-- Icons -->
+  <link rel="icon" type="image/png" sizes="192x192" href="./assets/icon-192.png"/>
+  <link rel="icon" type="image/png" sizes="512x512" href="./assets/icon-512.png"/>
+  <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png"/>
+  <meta name="apple-mobile-web-app-title" content="Crypto简史"/>
+
 </head>
 <body>
   <svg class="bg" viewBox="0 0 100 100" preserveAspectRatio="none" role="img" aria-label="科技感背景">
