--- a/cover.html
+++ b/cover.html
@@ -60,16 +60,38 @@
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="Crypto简史"/>
   <meta property="og:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
-  <meta property="og:image" content="./assets/og-image.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:title" content="Crypto简史"/>
   <meta name="twitter:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
-  <meta name="twitter:image" content="./assets/og-image.png"/>
   <!-- Icons -->
   <link rel="icon" type="image/png" sizes="192x192" href="./assets/icon-192.png"/>
   <link rel="icon" type="image/png" sizes="512x512" href="./assets/icon-512.png"/>
   <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png"/>
   <meta name="apple-mobile-web-app-title" content="Crypto简史"/>
+
+
+  <!-- Social / WeChat share metadata -->
+  <meta property="og:type" content="website"/>
+  <meta property="og:site_name" content="Crypto简史"/>
+  <meta property="og:title" content="Crypto简史"/>
+  <meta property="og:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
+  <meta property="og:url" content="https://sornon.github.io/history-of-crypto/"/>
+  <meta property="og:image" content="https://sornon.github.io/history-of-crypto/assets/og-image.jpg?v=20250825"/>
+  <meta property="og:image:width" content="1200"/>
+  <meta property="og:image:height" content="630"/>
+
+  <meta name="twitter:card" content="summary_large_image"/>
+  <meta name="twitter:title" content="Crypto简史"/>
+  <meta name="twitter:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
+  <meta name="twitter:image" content="https://sornon.github.io/history-of-crypto/assets/og-image.jpg?v=20250825"/>
+
+  <!-- Fallback for some crawlers -->
+  <link rel="image_src" href="https://sornon.github.io/history-of-crypto/assets/og-image.jpg?v=20250825"/>
+
+  <!-- Icons (absolute URLs to be unambiguous) -->
+  <link rel="icon" type="image/png" sizes="192x192" href="https://sornon.github.io/history-of-crypto/assets/icon-192.png?v=20250825"/>
+  <link rel="icon" type="image/png" sizes="512x512" href="https://sornon.github.io/history-of-crypto/assets/icon-512.png?v=20250825"/>
+  <link rel="apple-touch-icon" href="https://sornon.github.io/history-of-crypto/assets/apple-touch-icon.png?v=20250825"/>
 
 </head>
 <body>
