--- a/cover.html
+++ b/cover.html
@@ -1,28 +1,37 @@
 <!doctype html>
 <html lang="zh-CN">
 <head>
-  <link rel="canonical" href="https://sornon.github.io/history-of-crypto/"/>
-  <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="Crypto简史"/>
-  <meta property="og:title" content="Crypto简史"/>
-  <meta property="og:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
-  <meta property="og:url" content="https://sornon.github.io/history-of-crypto/"/>
-  <meta property="og:image" content="https://sornon.github.io/history-of-crypto/assets/og-image.jpg"/>
-  <meta property="og:image:secure_url" content="https://sornon.github.io/history-of-crypto/assets/og-image.jpg"/>
-  <meta property="og:image:type" content="image/jpeg"/>
-  <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/>
-  <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Crypto简史"/>
-  <meta name="twitter:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
-  <meta name="twitter:image" content="https://sornon.github.io/history-of-crypto/assets/og-image.jpg"/>
-  <link rel="image_src" href="https://sornon.github.io/history-of-crypto/assets/og-image.jpg"/>
-
+  <!-- Base -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta name="theme-color" content="#0d0d0d" />
   <title>Crypto简史</title>
-  <style>
+  <meta name="description" content="A Brief History of Crypto · 作者：Zino（赵择能）" />
+  <link rel="canonical" href="https://sornon.github.io/history-of-crypto/cover.html" />
+  <meta name="theme-color" content="#0d0d0d" />
+
+  <!-- Open Graph (WeChat/FB etc.) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Crypto简史" />
+  <meta property="og:title" content="Crypto简史" />
+  <meta property="og:description" content="A Brief History of Crypto · 作者：Zino（赵择能）" />
+  <meta property="og:url" content="https://sornon.github.io/history-of-crypto/cover.html" />
+  <meta property="og:image" content="https://sornon.github.io/history-of-crypto/assets/og-image-wx2.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Crypto简史" />
+  <meta name="twitter:description" content="A Brief History of Crypto · 作者：Zino（赵择能）" />
+  <meta name="twitter:image" content="https://sornon.github.io/history-of-crypto/assets/og-image-wx2.jpg" />
+
+  <!-- Icons -->
+  <link rel="icon" type="image/png" sizes="192x192" href="https://sornon.github.io/history-of-crypto/assets/icon-192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="https://sornon.github.io/history-of-crypto/assets/icon-512.png" />
+  <link rel="apple-touch-icon" href="https://sornon.github.io/history-of-crypto/assets/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Crypto简史" />
+
+<style>
     :root {
       --fg:#eaeef9;
       --muted:#aab3c5;
@@ -72,44 +81,6 @@
     }
     svg.bg { position:fixed; inset:0; width:100%; height:100%; display:block; }
   </style>
-
-  <!-- Social / WeChat share metadata -->
-  <meta property="og:type" content="website"/>
-  <meta property="og:title" content="Crypto简史"/>
-  <meta property="og:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
-  <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Crypto简史"/>
-  <meta name="twitter:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
-  <!-- Icons -->
-  <link rel="icon" type="image/png" sizes="192x192" href="./assets/icon-192.png"/>
-  <link rel="icon" type="image/png" sizes="512x512" href="./assets/icon-512.png"/>
-  <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png"/>
-  <meta name="apple-mobile-web-app-title" content="Crypto简史"/>
-
-
-  <!-- Social / WeChat share metadata -->
-  <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="Crypto简史"/>
-  <meta property="og:title" content="Crypto简史"/>
-  <meta property="og:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
-  <meta property="og:url" content="https://sornon.github.io/history-of-crypto/"/>
-
-  <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/>
-
-  <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Crypto简史"/>
-  <meta name="twitter:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
-  
-
-  <!-- Fallback for some crawlers -->
-  
-
-  <!-- Icons (absolute URLs to be unambiguous) -->
-  <link rel="icon" type="image/png" sizes="192x192" href="https://sornon.github.io/history-of-crypto/assets/icon-192.png"/>
-  <link rel="icon" type="image/png" sizes="512x512" href="https://sornon.github.io/history-of-crypto/assets/icon-512.png"/>
-  <link rel="apple-touch-icon" href="https://sornon.github.io/history-of-crypto/assets/apple-touch-icon.png"/>
-
 </head>
 <body>
   <svg class="bg" viewBox="0 0 100 100" preserveAspectRatio="none" role="img" aria-label="科技感背景">
