--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!doctype html>
 <html lang="zh-CN">
 <head>
+  <!-- Base -->
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
-  <meta name="theme-color" content="#0d0d0d"/>
   <title>Crypto简史 · 目录</title>
+  <meta name="description" content="A Brief History of Crypto · 作者：Zino（赵择能）" />
+  <link rel="canonical" href="https://sornon.github.io/history-of-crypto/index.html" />
+  <meta name="theme-color" content="#0d0d0d" />
+
+  <!-- Open Graph (WeChat/FB etc.) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Crypto简史" />
+  <meta property="og:title" content="Crypto简史" />
+  <meta property="og:description" content="A Brief History of Crypto · 作者：Zino（赵择能）" />
+  <meta property="og:url" content="https://sornon.github.io/history-of-crypto/index.html" />
+  <meta property="og:image" content="https://sornon.github.io/history-of-crypto/assets/og-image-wx2.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Crypto简史" />
+  <meta name="twitter:description" content="A Brief History of Crypto · 作者：Zino（赵择能）" />
+  <meta name="twitter:image" content="https://sornon.github.io/history-of-crypto/assets/og-image-wx2.jpg" />
+
+  <!-- Icons -->
+  <link rel="icon" type="image/png" sizes="192x192" href="https://sornon.github.io/history-of-crypto/assets/icon-192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="https://sornon.github.io/history-of-crypto/assets/icon-512.png" />
+  <link rel="apple-touch-icon" href="https://sornon.github.io/history-of-crypto/assets/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="Crypto简史" />
+
   <style>
     :root { --cshell-accent:#7aa2ff; --cshell-accent2:#9a7aff; --cshell-fg:#eaeaea; --cshell-muted:#9aa3b2; --cshell-bg:#0b0c12; --cshell-card:#12131a; --cshell-border:#1c1e26; }
     #cshell-app, #cshell-app * { box-sizing: border-box; }
@@ -57,7 +80,7 @@
     .cshell-toast { position: fixed; left:50%; transform: translateX(-50%); bottom: calc(64px + env(safe-area-inset-bottom)); background: rgba(0,0,0,.85); color:#fff; padding:10px 14px; border-radius:10px; z-index:7; opacity:0; transition:.25s opacity ease; }
     .cshell-toast.show { opacity:1; }
   
-.cshell-chapno{opacity:.85;margin-right:.4em;white-space:nowrap;}
+    .cshell-chapno{opacity:.85;margin-right:.4em;white-space:nowrap;}
     
     /* Mobile scroll safety: keep overlays from eating gestures */
     #cshell-nav { pointer-events: none; }
@@ -77,30 +100,6 @@
     }
 
   </style>
-
-  <!-- Social / WeChat share metadata -->
-  <meta property="og:type" content="website"/>
-  <meta property="og:site_name" content="Crypto简史"/>
-  <meta property="og:title" content="Crypto简史"/>
-  <meta property="og:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
-  <meta property="og:url" content="https://sornon.github.io/history-of-crypto/"/>
-  <meta property="og:image" content="https://sornon.github.io/history-of-crypto/assets/og-image.jpg?v=20250825"/>
-  <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/>
-
-  <meta name="twitter:card" content="summary_large_image"/>
-  <meta name="twitter:title" content="Crypto简史"/>
-  <meta name="twitter:description" content="A Brief History of Crypto · 作者：Zino（赵择能）"/>
-  <meta name="twitter:image" content="https://sornon.github.io/history-of-crypto/assets/og-image.jpg?v=20250825"/>
-
-  <!-- Fallback for some crawlers -->
-  <link rel="image_src" href="https://sornon.github.io/history-of-crypto/assets/og-image.jpg?v=20250825"/>
-
-  <!-- Icons (absolute URLs to be unambiguous) -->
-  <link rel="icon" type="image/png" sizes="192x192" href="https://sornon.github.io/history-of-crypto/assets/icon-192.png?v=20250825"/>
-  <link rel="icon" type="image/png" sizes="512x512" href="https://sornon.github.io/history-of-crypto/assets/icon-512.png?v=20250825"/>
-  <link rel="apple-touch-icon" href="https://sornon.github.io/history-of-crypto/assets/apple-touch-icon.png?v=20250825"/>
-
 </head>
 <body>
   <div id="cshell-app" aria-live="polite">
