--- a/cover.html
+++ b/cover.html
@@ -54,8 +54,8 @@
       display:flex; flex-direction:column; align-items:center; justify-content:center;
       text-align:center; padding:24px; pointer-events:none;
     }
-    h1 { margin:0 0 8px 0; font-size: clamp(28px, 6vw, 56px); letter-spacing: .5px; }
-    h2 { margin:0 0 20px 0; font-weight:500; font-size: clamp(14px, 3.2vw, 22px); color:var(--muted); }
+    h1 { margin:0 0 29px 0; font-size: clamp(50px, 6vw, 100px); letter-spacing: .5px; color: #FFD54A; }
+    h2 { margin:0 0 0px 0; font-weight:500; font-size: clamp(26px, 3.2vw, 40px); color:var(--muted); }
     .author { margin-top:8px; font-size: clamp(12px, 2.6vw, 16px); color:var(--muted); }
     .cta-wrap {
       position:fixed; left:0; right:0;
@@ -155,8 +155,8 @@
   </svg>
 
   <div class="overlay" aria-live="polite">
-    <h1>Crypto简史</h1>
-    <h2>A Brief History of Crypto</h2>
+    <h2>A Brief History of</h2>
+    <h1>CRYPTO简史</h1>
     <div class="author">作者：Zino （赵择能）</div>
   </div>
 
