--- a/test/test202509101.html
+++ b/test/test202509101.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-<title>La Casa 专属隐藏款 · 电子菜单（长者友好版）</title>
+<title>La Casa 专属隐藏款 · 电子菜单</title>
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="theme-color" content="#111">
 <style>
@@ -161,7 +161,7 @@
 <header>
   <div class="wrap">
     <h1>La Casa 专属隐藏款 · Hidden Treasures</h1>
-    <div class="sub">一级分类作为 Tab 切换；每个 Tab 内为可左右滑动的轮播。底部半透明涂层显示产品名称、简介与价格。</div>
+    <div class="sub">酒隐之茄专为雪茄客打造的雪茄配饮，经过了反复的测评，能够带来非凡的品茄体验。不同类型的酒，在灰茄前、茄中、茄后兼容性不同。</div>
   </div>
   <nav class="tabs" id="tabs" aria-label="分类切换"></nav>
 </header>
